Vertex parent on curve point results in blank 'parent_type' on child object #36004

Closed
opened 2013-07-04 13:57:25 +02:00 by Ray Mairlot · 3 comments

%%%--- Operating System, Graphics card ---

Windows 7 64-bit, nvidia gtx570

- Blender version with error, and version that worked ---

Both 2.67 and r57981 (latest build) have error

- Short description of error ---

When vertex parenting an object to a control point/vertex of a curve the resulting child object will have a blank 'parent_type' instead of the normal 'Vertex' value that a mesh vertex parent would have. The vertex parent works it just doesn't display properly in the interface.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open default startup file.
  2. Add> Curve (any curve object)
  3. Select original cube mesh and shift select new curve.
  4. Enter edit mode on the curve, select a control point/vertex, 'Ctrl + P > Make vertex parent'.
  5. Tab out of edit mode and on the cube's 'Object > Relations' panel the 'parent_type' dropdown box will be blank.
    %%%
%%%--- Operating System, Graphics card --- Windows 7 64-bit, nvidia gtx570 - Blender version with error, and version that worked --- Both 2.67 and r57981 (latest build) have error - Short description of error --- When vertex parenting an object to a control point/vertex of a curve the resulting child object will have a blank 'parent_type' instead of the normal 'Vertex' value that a mesh vertex parent would have. The vertex parent works it just doesn't display properly in the interface. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Open default startup file. 2. Add> Curve (any curve object) 3. Select original cube mesh and shift select new curve. 4. Enter edit mode on the curve, select a control point/vertex, 'Ctrl + P > Make vertex parent'. 5. Tab out of edit mode and on the cube's 'Object > Relations' panel the 'parent_type' dropdown box will be blank. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r58123.%%%

%%%fixed r58123.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36004
No description provided.