fix [#36004] Vertex parent on curve point results in blank 'parent_type' on child object